WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78101
[GTK] Fix WebKitWebView::decide-policy API documentation
https://bugs.webkit.org/show_bug.cgi?id=78101
Summary
[GTK] Fix WebKitWebView::decide-policy API documentation
Carlos Garcia Campos
Reported
2012-02-08 04:03:56 PST
- It refers to WebKitPolicyClient instead of WebKitWebView - Trailing ':' is missing - References @decision as WebKitNavigationPolicyDecision instead of WebKitPolicyDecision
Attachments
Patch
(1.63 KB, patch)
2012-02-08 04:05 PST
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2012-02-08 04:05:43 PST
Created
attachment 126049
[details]
Patch
WebKit Review Bot
Comment 2
2012-02-08 04:09:00 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2012-02-08 07:49:09 PST
Committed
r107087
: <
http://trac.webkit.org/changeset/107087
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug