[GTK] Fix WebKitWebView::decide-policy API documentation https://bugs.webkit.org/show_bug.cgi?id=78101

Reviewed by Martin Robinson.

- It refers to WebKitPolicyClient instead of WebKitWebView
- Trailing ':' is missing
- References @decision as WebKitNavigationPolicyDecision instead
of WebKitPolicyDecision

* UIProcess/API/gtk/WebKitWebView.cpp:
(webkit_web_view_class_init):

Canonical link: https://commits.webkit.org/94999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107087 268f45cc-cd09-0410-ab3c-d52691b4dbfc